# TorrentMix-WebUI

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Claude.md  LICENSE  README.md  README.zh-CN.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
deploy/sidecar/: Dockerfile  README.md  README.zh-CN.md  updater.mjs
deploy/standalone/: Caddyfile  Dockerfile  README.md  README.zh-CN.md
deploy/standalone-service/: Dockerfile  README.md  README.zh-CN.md  config.example.json
docs/: Adapter Notes (qBittorrent).md  Transmission's RPC specification(4.0.6).md  Transmission's RPC specification(main).md  WebUI API (qBittorrent 4.1).md  WebUI API (qBittorrent 5.0).md  WebUI API (qBittorrent v3.1.x).md  WebUI API (qBittorrent v3.2.0 v4.0.4).md
rust/: Cargo.toml  README.md  README.zh-CN.md
rust/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
rust/apps/desktop/src-tauri/assets/: index.html
rust/apps/desktop/src-tauri/src/: main.rs
rust/apps/standalone-service/: Cargo.toml
rust/apps/standalone-service/src/: main.rs
rust/crates/gateway/: Cargo.toml
rust/crates/gateway/src/: lib.rs
src/: main.ts  style.css
tests/: alias-loader.mjs  auth.test.ts  backend-preferences.test.ts  forced-backend.test.ts  format.test.ts  qbit-detail.test.ts  qbit-sync.test.ts  qbit-tags.test.ts  qbit-torrent-limits.test.ts  qbit-transfer-settings.test.ts  register-loader.mjs  torrent-context.test.ts  trans-adapter.test.ts  trans-url-detect.test.ts  tsconfig.json  version-detect.test.ts
(+62 files in other folders)
