[package]
name = "standalone-service"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gateway = { path = "../../crates/gateway" }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

