[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.7.9", features = ["http1", "tokio"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
bytes = "1.10.1"
futures-util = "0.3.31"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.44.1", features = ["fs", "net", "sync", "time"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
url = "2.5.4"
